# gnve

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
assets/: CMakeLists.txt
assets/blend/: square.blend  square.blend1  viking_room.blend
assets/models/: CMakeLists.txt  square.gltf  viking_room.gltf
assets/textures/: CMakeLists.txt
cmake/: dependencies.cmake
include/engine/: engine.h
shaders/: CMakeLists.txt  shader.slang
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/shaders/: CMakeLists.txt  shader.slang
