cmake_minimum_required(VERSION 3.21)
project(GNVEApp VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
    message(STATUS "Using ccache: ${CCACHE_PROGRAM}")
endif()

if(UNIX AND NOT APPLE)
    find_program(MOLD_LINKER mold)
    find_program(LLD_LINKER lld)
    find_program(GOLD_LINKER gold)

    if(MOLD_LINKER)
        add_link_options(-fuse-ld=mold)
        message(STATUS "Using mold linker: ${MOLD_LINKER}")
    elseif(LLD_LINKER)
        add_link_options(-fuse-ld=lld)
        message(STATUS "Using lld linker: ${LLD_LINKER}")
    elseif(GOLD_LINKER)
        add_link_options(-fuse-ld=gold)
        message(STATUS "Using gold linker: ${GOLD_LINKER}")
    endif()
endif()

add_subdirectory(src/engine)
add_subdirectory(src/app)
add_subdirectory(src/shaders)
